chore: scaffold project

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,29 @@ typings/
 
 # VS Code files
 .vscode/
+
+.venv
+__pycache__/
+*.py[cod]
+*.egg-info/
+*.eggs/
+build/
+dist/
+.mypy_cache/
+.pytest_cache/
+.coverage
+.DS_Store
+.env
+.env.*
+pip-wheel-metadata/
+*.pyo
+*.pyd
+*.sqlite3
+*.db
+*.log
+*.pot
+*.mo
+*.orig
+*.bak
+*.swp
+*~
